@@ -26,6 +26,11 @@
 #  endif
 #endif
 
+/* And another temporary (?) hack for Android. See RT #92671. */
+#ifdef __ANDROID__
+#  undef isfinite
+#endif
+
 /* 2 ** 28 - 307 */
 #define RANGE_CUTOFF        (268435456 - 307)
 #define DAYS_PER_400_YEARS  146097
